--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,9 @@ dependencies = [
     "huggingface-hub[cli]>=0.24,<1",
     "tokenizers>=0.21.4",
     "hf-transfer>=0.1.9",
+    "cupy>=13.6.0",
+    "es-dep-news-trf",
 ]
+
+[tool.uv.sources]
+es-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/es_dep_news_trf-3.8.0/es_dep_news_trf-3.8.0-py3-none-any.whl" }
