--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
     "huggingface-hub[cli]>=0.24,<1",
     "tokenizers>=0.21.4",
     "hf-transfer>=0.1.9",
-    "cupy>=13.6.0",
     "es-dep-news-trf",
+    "cupy-cuda12x>=13.6.0",
 ]
 
 [tool.uv.sources]
