refactor: cleaner version of transformer based preprocesor

--- a/src/NLP_Preprocessing/extra.yml
+++ b/src/NLP_Preprocessing/extra.yml
@@ -41,3 +41,20 @@ lemmas:
     "parqueare", "parqueares", "parqueáremos", "parquearen"
   ]
 ...
+
+---
+negative:
+  - "no"
+  - ni
+  - nunca
+  - jamas
+  - sin
+  - tampoco
+  - ningun
+  - ninguna
+  - ninguno
+  - ningunas
+  - ningunos
+  - nada
+  - nadie
+...
